[gd_scene load_steps=9 format=3 uid="uid://dt1qh1wl54q4t"]

[ext_resource type="Texture2D" uid="uid://8sem03c6s5f1" path="res://graphics/player/player.png" id="1_3irwu"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_vroqg"]
[ext_resource type="Texture2D" uid="uid://d1b47pmk4mxea" path="res://graphics/decals/white.png" id="3_r4dl1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_erjyn"]
radius = 63.0714

[sub_resource type="Gradient" id="Gradient_h7gdy"]
colors = PackedColorArray(0.309804, 1, 1, 0.6, 0.682353, 1, 1, 0.145098)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2d4to"]
gradient = SubResource("Gradient_h7gdy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_052hr"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.8
color = Color(0.309804, 1, 1, 0.6)
color_ramp = SubResource("GradientTexture1D_2d4to")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_fnsck"]
polygon = PackedVector2Array(-2, -59, 9, -57, 20, -61, 28, -59, 35, -48, 43, -41, 48, -29, 59, -26, 76, -11, 88, -12, 96, -5, 108, -4, 116, 2, 123, 1, 126, 5, 131, 6, 135, 19, 131, 32, 125, 32, 123, 37, 114, 37, 108, 37, 99, 45, 96, 52, 91, 54, 62, 54, 59, 48, 59, 43, 48, 42, 42, 41, 23, 49, 15, 55, -12, 63, -35, 57, -38, 46, -44, 35, -50, 30, -54, 22, -51, 18, -60, 9, -61, -14, -58, -26, -54, -29, -51, -39, -42, -45, -30, -46, -26, -52, -14, -56, -11, -55)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_vroqg")
speed = 750.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.96046e-08)
shape = SubResource("CircleShape2D_erjyn")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, 1)
rotation = 1.5612
texture = ExtResource("1_3irwu")

[node name="PrimaryActionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SecondaryActionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 20)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(128, 13)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(126, 28)

[node name="GPUParticles2D" type="GPUParticles2D" parent="LaserStartPositions"]
position = Vector2(130, 18)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_052hr")
texture = ExtResource("3_r4dl1")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_fnsck")

[connection signal="timeout" from="PrimaryActionTimer" to="." method="_on_timer_primary_action_timeout"]
[connection signal="timeout" from="SecondaryActionTimer" to="." method="_on_timer_secondary_action_timeout"]
